# FastApiEvents

./: .gitignore  main.py  pyproject.toml
app/: models.py
app/handlers/: auth.py  events.py
app/schemas/: __init__.py  auth.py  events.py
app/services/: auth.py  encryption.py
database/: base.py
migrations/: env.py
migrations/versions/: 3af2fc5b0bc4_0001_init.py
